--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <meta name="description" content="A Calculator Application" />
+    <meta name="author" content="Nwaneri Uchechukwu Chigozie" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Nwaneri Calculator App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
